@@ -14,16 +14,16 @@
 
 	<?php if ( is_home() && current_user_can( 'publish_posts' ) ) : ?>
 
-			<h1><?php _e( 'Oh no! Article not found! 404 error!', 'ayaspirit' ); ?></h1>
+			<h1><?php esc_html_e( 'Oh no! Article not found! 404 error!', 'ayaspirit' ); ?></h1>
 	
 	<?php elseif ( is_search() ) : ?>
 
-			<h1><?php _e( 'No Results Found!', 'ayaspirit' ); ?></h1>
+			<h1><?php esc_html_e( 'No Results Found!', 'ayaspirit' ); ?></h1>
 			<?php get_search_form(); ?>
 
 	<?php else : ?>
 
-			<p><?php _e( 'It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help.', 'ayaspirit' ); ?></p>
+			<p><?php esc_html_e( 'It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help.', 'ayaspirit' ); ?></p>
 			<?php get_search_form(); ?>
 
 	<?php endif; ?>
