@@ -73,7 +73,7 @@
 
 						endif;
 						
-						the_content( __( 'Read More...', 'ayaspirit') );
+						the_content( esc_html__( 'Read More...', 'ayaspirit') );
 					?>
 				</div><!-- .content -->
 
@@ -88,7 +88,7 @@
 								
 					<?php endif;
 
-						  the_content( __( 'Read More', 'ayaspirit') );
+						  the_content( esc_html__( 'Read More', 'ayaspirit') );
 					?>
 				</div><!-- .content -->
 
@@ -100,12 +100,12 @@
 			<?php the_author_posts_link(); ?>
 		</span><!-- .author-icon -->
 
-		<?php edit_post_link( __( 'Edit', 'ayaspirit' ), '<span class="edit-icon">', '</span>' ); ?>
+		<?php edit_post_link( esc_html__( 'Edit', 'ayaspirit' ), '<span class="edit-icon">', '</span>' ); ?>
 
 		<?php if ( ! post_password_required() && ( comments_open() || get_comments_number() ) ) : ?>
 
 					<span class="comments-icon">
-						<?php comments_popup_link(__( 'No Comments', 'ayaspirit' ), __( '1 Comment', 'ayaspirit' ), __( '% Comments', 'ayaspirit' ), '', __( 'Comments are closed.', 'ayaspirit' )); ?>
+						<?php comments_popup_link(esc_html__( 'No Comments', 'ayaspirit' ), esc_html__( '1 Comment', 'ayaspirit' ), esc_html__( '% Comments', 'ayaspirit' ), '', esc_html__( 'Comments are closed.', 'ayaspirit' )); ?>
 					</span><!-- .comments-icon -->
 		
 		<?php endif; ?>
