@@ -1,3 +1,7 @@
+AyaSpirit 1.0.9, 2017-01-12
+------------------------
+- bug fixes
+
 AyaSpirit 1.0.8, 2016-12-04
 ------------------------
 - bug fixes
